# rust-spark

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  rdd.rs  serializer.rs  task.rs  tasks.rs
master/: Cargo.toml
master/src/: main.rs
master/src/threads/: pool.rs
schedular/: Cargo.toml
schedular/src/: main.rs
worker/: Cargo.toml
worker/src/: main.rs
