[package]
name = "schedular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
common = { path = "./../common" }
serde = { version = "1.0.204", features = ["derive"] }
erased-serde = "0.4.5"
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["blocking"] }
